# prototypes

bevy-test/: Cargo.toml
bevy-test/src/: main.rs
bf/: Cargo.toml
bf/src/: lib.rs  main.rs  parse.rs  run.rs  token.rs
c-test/: hello  hello.c  test.son
compiler/: .gitignore  Cargo.toml
compiler/src/: generate.rs  lexer.rs  lib.rs  main.rs  parser.rs  test.rs
continue-pass-style/: package.json  tsconfig.json
continue-pass-style/src/: index.ts  op.ts  util.ts
daedalus/: .eslintrc.json  index.html  package.json  tailwind.config.js
daedalus/src/: Ability.tsx  App.tsx  Entry.tsx  SkillEntry.tsx  index.tsx  minecraft.ts  store.ts
dice/: Cargo.toml
dice/src/: main.rs
gen-test/src/: main.rs
golfjs/: dice.js  guess.js
interpreter/: Cargo.toml  foo.es
interpreter/src/: lib.rs  main.rs
linear-algebra/src/: lib.rs  matrix.rs  vector.rs
low-level-lang/: Cargo.toml  run.sh
low-level-lang/src/: codegen.rs  main.rs
math/src/: main.rs
mialang/: Cargo.toml
mialang/src/: ext.rs  main.rs  token.rs
network-test/: Cargo.toml
network-test/src/: fragment.glsl  main.rs  message.rs  net.rs  render.rs
portal-test/: Cargo.toml
portal-test/src/: main.rs
raytrace/: Cargo.toml
raytrace/src/: camera.rs  hittable.rs  main.rs  material.rs  render.rs  vec3.rs  world.rs
re-iterator/: Cargo.toml
re-iterator/src/: lib.rs  main.rs  re_iter.rs  re_range.rs
rice_pudding/: .gitignore  .yarnrc.yml  README.md  config.ts  package.json
rice_pudding/prisma/: schema.prisma
rice_pudding/src/: command.ts  config.ts  deploy.ts  index.ts  util.ts
rice_pudding/src/commands/: give.ts  ping.ts  top.ts  wallet.ts
rust-graphics/: .gitignore  Cargo.toml
rust-graphics/assets/: tiles.json  world.json
rust-graphics/pack/: pack.json
rust-graphics/src/: assets.rs  chunk.rs  fragment.glsl  input.rs  main.rs  pack.rs  renderer.rs  vertex.glsl
rust-graphics/src/render/: mod.rs  uniforms.rs
rust-graphics/src/render/fields/: mod.rs  quad.rs
rust-graphics/src/render/shader/: mod.rs
rust-science/: Cargo.toml
rust-science/src/: lib.rs  selfext.rs
rust-science/src/jiter/: mod.rs
sonance/: .gitignore
sonance-dreams/: sonance.md
sonance-dreams/core/: scope.son
sonance-dreams/core/data/: boolean.son  never.son  optional.son  result.son  unit.son
sonance-dreams/core/traits/: default.son  from.son
sonance-vm/: Cargo.toml
sonance-vm/src/: main.rs  memory.rs
sonance/1/src/token/: error.rs  mod.rs
sonance/2/: Cargo.toml
sonance/2/src/: builder.rs  error.rs  frames.rs  funny.rs  instruction.rs  lib.rs  main.rs  parser.rs  test.rs
sonance/2/src/assembler/: mod.rs
sonance/2/src/device/: memory.rs  mod.rs
sonance/2/src/parser/: error.rs  mod.rs
sonance/2/src/vm/: device.rs  error.rs  frames.rs  instruction.rs  mod.rs  step.rs
splist/1/splist-client/: .eslintrc.json  package.json
splist/1/splist-client/src/: App.tsx
splist/1/splist-client/src-tauri/: tauri.conf.json
splist/1/splist-server/: Cargo.toml
splist/2/splist-client/: .eslintrc.json  package.json  tsconfig.json
splist/2/splist-client/src/: client.ts  index.ts
splist/2/splist-server/: Cargo.toml
splist/2/splist-server/src/: main.rs
splist/3/splist/: .eslintrc.json  .gitignore  package.json  tsconfig.server.json
splist/3/splist/.data/: db.sqlite  db.sqlite-journal
splist/3/splist/prisma/: schema.prisma
splist/3/splist/prisma/migrations/20220705011944_start/: migration.sql
splist/3/splist/prisma/migrations/20220705215747_add_user/: migration.sql
splist/3/splist/src/components/: Messages.tsx
splist/3/splist/src/pages/: _app.tsx  index.tsx
splist/3/splist/src/pages/api/trpc/: [trpc].ts
splist/3/splist/src/server/: createContext.ts  index.ts
splist/3/splist/src/server/main/: dev.ts
splist/3/splist/src/utils/: hooks.ts  trpc.ts
splist/4/: .gitignore  Cargo.toml
splist/4/.cargo/: config.toml
splist/4/prisma/: schema.prisma
splist/4/prisma-cli/: Cargo.toml
splist/4/splist-client/: Cargo.toml
splist/4/splist-client/src/: main.rs
splist/4/splist-server/: Cargo.toml
splist/4/splist-server/src/: main.rs
steve-python/src/: steve.py  test.py
tile-test/: Cargo.toml
tile-test/src/: assets.rs  chunk.rs  input.rs  main.rs
tile-test/src/render/fields/: texture.rs
type-test/: Cargo.toml
type-test/src/: builder.rs  data.rs  error.rs  expr.rs  lib.rs  main.rs  test.rs  ty.rs
voxel/: Cargo.toml
voxel/src/: camera.rs  fragment.glsl  main.rs  vertex.glsl
wave-collapse/: Cargo.toml
wave-collapse/src/: main.rs
