[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
proptest = "1.0.0"

[dependencies]
anyhow = "1.0.53"
chumsky = "0.7.0"
indoc = "1.0"

[dependencies.clap]
version = "3.0.13"
features = ["derive"]
