[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
chumsky = "0.7.0"
indoc = "1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[dependencies.clap]
version = "3.0.13"
features = ["derive"]
