[package]
name = "low-level-lang"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
cranelift = "0.75.0"
cranelift-module = "0.75.0"
cranelift-object = "0.75.0"
target-lexicon = "0.12.0"
