[package]
name = "network-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
bincode = "1.3.3"
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
glfw = "0.43"
luminance = "0.46"
luminance-derive = "0.9"
luminance-front = "0.6"
luminance-glfw = "0.18"
