[package]
name = "raytrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
rand = "0.8.5"
rayon = "1.5.3"
clap = { version = "3.1.18", features = ["derive"] }

[dependencies.image]
version = "0.24.2"
features = ["png"]
default-features = false
