[package]
name = "rust-graphics"
version = "0.1.0"
authors = ["jamesBeeProg <jamesBeeProg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41"
luminance = "0.43"
luminance-glfw = "0.15"
luminance-windowing = "0.9"
luminance-derive = "0.6"
