[package]
name = "rust-graphics"
version = "0.1.0"
authors = ["jamesBeeProg <jamesBeeProg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41"
luminance = "0.43"
luminance-glfw = "0.15"
luminance-windowing = "0.9"
luminance-derive = "0.6"
cgmath = "0.18.0"
noise = "0.7.0"
rand = "0.8.3"
anyhow = "1.0.40"
image = "0.23.14"
serde_json = "1.0.64"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]
