[package]
name = "voxel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
glfw = "0.41"
luminance = "0.44"
luminance-glfw = "0.16"
luminance-windowing = "0.10"
luminance-derive = "0.7"
cgmath = "0.18.0"
itertools = "0.10.1"
