[package]
name = "splist-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17.1"
log = "0.4.0"
env_logger = "0.8.4"
futures-util = "0.3.21"
futures-channel = "0.3.21"
bincode = "1.3.3"
serde = "1.0.138"
