[package]
name = "splist-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.2" }
serde = "1.0.138"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17.1"
log = "0.4.0"
env_logger = "0.8.4"
futures-util = "0.3.21"
